--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
                 <li><a href="about.html">About us</a></li>
                 <li><a href="ourconcept.html">Our Concept</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact</a> <i class="ion-ios-circle-filled color"></i></li>
+                <li><a href="contact.html">Insight</a> <i class="ion-ios-circle-filled color"></i></li>
 
 
 
@@ -96,11 +96,11 @@
             <div class="h-30"></div>
             <p> </p>
             <div class="contact-info">
-                <p><i class="ion-android-call"></i> +4917632811289 (Whatsup)</p>
-                <p><i class="ion-android-call"></i> +6289501880467 (Call)</p>
-                <p><i class="ion-ios-email"></i> gertaone@gmx.de</p>
-                <p><i class="ion-ios-email"></i> gertaone@gmail.com</p>
-                 <p><i class="ion-ios-home"></i> Po Box 41286, Subang, West Java, Indonesia</p>
+                <!--<p><i class="ion-android-call"></i> +4917632811289 (Whatsup)</p>-->
+                <!--<p><i class="ion-android-call"></i> +6289501880467 (Call)</p>-->
+                <!--<p><i class="ion-ios-email"></i> gertaone@gmx.de</p>-->
+                <p><i class="ion-ios-email"></i><a href="https://medium.com/@itsmecevi/fundamental-faktor-penggerak-pasar-ace600c13c8c">Fundamental: Faktor penggerak pasar</a></p>
+                <!--<p><i class="ion-ios-home"></i> Po Box 41286, Subang, West Java, Indonesia</p>-->
             </div>
         </div>
 
