--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
     <div class="container main-container">
         
         <div class="col-md-6">
-            <h3 class="text-uppercase">contact </h3>
+            <h3 class="text-uppercase">Contact</h3>
             <h5>Getting in touch is easy!</h5>
             <div class="h-30"></div>
             <p> </p>
