--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
                 <!--<p><i class="ion-android-call"></i> +4917632811289 (Whatsup)</p>-->
                 <!--<p><i class="ion-android-call"></i> +6289501880467 (Call)</p>-->
                 <!--<p><i class="ion-ios-email"></i> gertaone@gmx.de</p>-->
-                <p><i class="ion-ios-email"></i><a href="https://medium.com/@itsmecevi/fundamental-faktor-penggerak-pasar-ace600c13c8c">Fundamental: Faktor penggerak pasar</a></p>
+                <p><i class="ion-ios-email"></i><a href="https://medium.com/@itsmecevi/fundamental-faktor-penggerak-pasar-ace600c13c8c">Fundamental: Faktor penggerak pasar derivatif</a></p>
                 <!--<p><i class="ion-ios-home"></i> Po Box 41286, Subang, West Java, Indonesia</p>-->
             </div>
         </div>
