--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <li><a href="about.html">About us</a></li>
                 <li><a href="ourconcept.html">Our Concept</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">Insight</a></li>
 
 
 
