--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
     <!-- top bar -->
     <div class="top-bar">
         <h1>Contact</h1>
-        <p><a href="#">Home</a> / Contact </p>
+        <p><a href="#">Home</a> / Insight </p>
     </div>
     <!-- end top bar -->
 
@@ -111,7 +111,7 @@
     <!-- footer -->
     <footer>
         <div class="container-fluid">
-            <p class="copyright">© gertaone-survey 2019</p>
+            <p class="copyright">©gertaone-research 2020</p>
         </div>
     </footer>
     <!-- end footer -->
