--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
                 <li><a href="about.html">About us</a> <i class="ion-ios-circle-filled color"></i></li>
                 <li><a href="ourconcept.html">Our Concept</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">Insight</a></li>
 
                 <!--<li class="box-label">Follow me</li>-->
 
